# indexer

./: .gitignore  README.md  implementation_plan.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  indexer.rs  lib.rs  main.rs  watcher.rs
src-tauri/src/parsers/: docx.rs  mod.rs  text.rs  xlsx.rs
src/components/Search/: PreviewPanel.tsx  ResultCard.tsx  SearchView.tsx
src/components/Settings/: SettingsView.tsx  StatsPanel.tsx
src/utils/: commands.ts  types.ts
